Spacing fix

--- a/resources/scss/blocks/core/_group.scss
+++ b/resources/scss/blocks/core/_group.scss
@@ -13,6 +13,10 @@
 	padding-left: var(--component-padding);
 	padding-right: var(--component-padding);
 
+	&:last-child {
+		margin-bottom: 0;
+	}
+
 	@include breakpoints.breakpoint(md) {
 		padding-left: 0;
 		padding-right: 0;
